docs/style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Roboto','Montserrat Alternates','Poppins' ,sans-serif;
}
video {
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    min-height: 100%;
    width: 100%;
}
img {
    object-fit: cover;
    position: absolute;
    top: 0;
    left: 0;
    min-height: 100%;
    width: 100%;
}
section{
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;    
    min-height: 40vh;    
    width: 100vw;
    background: transparent;
    background-position: center;
    background-size: cover;
}
body{
    display: flex;
    flex-direction: column;
    width: 100vw;
    justify-content: center;
    overflow-x: hidden;
}
.spacer{
    aspect-ratio: 960/540;
    width: 100%;
    top: 2vh;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    z-index: 1;
    position: absolute;
}
.waveHaikei{
    background-image: url("./layered-waves.svg");
}
.spacerWO{
    aspect-ratio: 217/26;
    width: 100%;
    top: 0%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    z-index: 30;
    position: absolute;
}
.waveOpacity{
    background-image: url("wavesOpacity.svg");
}
.TopBanner{
   position: absolute;
   z-index: 3;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 4vh;
   top: 0%;
   width: 100%;
   background-color: #38227f;
   background-position: center;
   background-size: cover;
}
.TopText{
    z-index: 1;
    font-size: 0.8em;
    font-weight: 400;
    color: #fff;
    text-align: center;
    transition: 0.2s;
    padding: 0.1em 0.4em 0.1em;
}
.TopText:hover {
    color: rgba(255, 245, 252, 0.6);
}
ul{
    display: flex;
    position: absolute;
    width: 50%;
    left: 45%;
    padding: 0;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}
li{
    position: relative;
    list-style: none;
    width: 70;
    z-index: 1;
}
li a {
    position: relative;
    display: flex;
    text-decoration: none;
    justify-content: center;
    align-items: center;
    width: 100%;
    margin: 4.4em 0.4em 0em;
    text-align: center;
}
a:focus{
    outline: 2px solid rgba(255, 245, 252, 0.3);
    border-radius: 10% / 50%;
}
.TopContainer{
    background: transparent;
    position: relative;
    z-index: 1;
    top: 0;
    width: 100%;
    min-height: 30vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    /* border: 2px solid rgba(6,1,23, 0.2);
    border-radius: 20px;
    backdrop-filter: blur(30px); */
}
.MainTextHolder{
    position: relative;
    background: transparent;
    z-index: 1;
    width: 100%;
    margin-top: 25%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.CenteredElements{
    overflow: hidden;
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
@keyframes onLoad{
    0%{ transform: translateY(-100%);}
    100%{ transform: translateY(150%);}
}
.MainText{
    font-size: 2rem;
    z-index: 1;
    letter-spacing: -1.3px;
    position: relative;
    padding: 0.4em 0 0;
    /*transform: translateY(100%);
    transition: 1s;*/
    /*animation: onLoad 1s ease-in-out 0s 1 normal forwards;*/
    /*animation-name: onLoad;
    animation-duration: 1s;
    animation-fill-mode: forwards;*/
}
h2{
    /*font-size: 2em;*/
    /*color: #020C21;*/
    /*color: #f0e2fa;*/
    /*color: #fafafc;*/
    color: #120932;
    font-weight: 700; 
    /* color: rgba(18, 9, 50, 0.9); */
    text-align: center;
}
.IntroductionBox{
    min-width: 20vw;
    max-width: 65vw;
    display: flex;
    padding: 0 0 5em;
}
.IntroductionText{
    font-weight: 300;
    color: rgba(18, 9, 50, 0.86);
    text-align: center;
}
.ProjectsBanner{
    position: relative;
    z-index: 25;
    margin: 15vh 0 10vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: 12vh;
    min-width: 20vw;
    max-width: 65vw;
    /* width: 100%; */
 }
 .projectTitle{
    opacity: 0.85;
    font-size: 3em;
    color: #fff5fc;
    font-weight: 900; 
    text-align: center;

 }
.previewContainer{
    /* margin: 5vh 0;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    position: relative; */
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}



.previewContainer .previewContent{
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: space-evenly;
}
  .previewContainer .previewIntro{
    position: relative;
    width: 40%;
    height: 100%;
    z-index: 20;
    margin-left: 10%;
  }
  .previewIntro{
    color: #fff5fc;
    opacity: 0.85;
  }
  .previewIntro .previewTextWrapper{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: fit-content;
    pad: 0 25px 0 50px;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    pointer-events: none;
  }
  .previewIntro .previewTextWrapper span{
    overflow: hidden;
  }
  .previewIntro .previewTextWrapper span > *{
    transition: 0.5s ease;
    opacity: 0;
    transform: translateY(300px);
    transition-delay: calc((3 - var(--idx)) * 0.1s);
  }
  .previewIntro .previewTextWrapper.active{
    pointer-events: all;
  }
  .previewIntro .previewTextWrapper.active span > *{
    opacity: 1;
    transform: translateY(0);
    transition-delay: calc(var(--idx) * 0.1s);
  }
  /* .previewIntro:not(.type) {
  
  } */
  .previewIntro .title{
    font-size: 1.5rem;
    font-weight: 400;
  }
  .previewIntro .type{
    font-size: 1.3rem;
    font-weight: 400;
    text-transform: uppercase;
    line-height: 1.1;
    letter-spacing: 1px;
    margin-top: 10px;
  }
  .previewIntro .description{
    font-size: 1rem;
    font-weight: 200;
    margin-top: 8px;
  }
  .previewIntro .readMoreButton{
    width: 250px;
    height: 50px;
    border-radius: 50px;
    margin-top: 20px;
  }
  .previewContent .thumbnailList{
    position: relative;
    height: fit-content;
    flex: 1;
  }
  .thumbnailList .previewWrapper{
    position: relative;
    z-index: 10;
    width: 10em;
    height: 300px;
  }
  .thumbnailList .previewWrapper .thumbnail{
    position: absolute;
    height: 10em;
    width: 10em;
    border-radius: 15px;
    overflow: hidden;
    transition: 0.75s cubic-bezier(0.6, 0.1, 0.3, 1);
    transform: translateX(calc(var(--idx) * 230px));
    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
  }
  .thumbnailList .previewWrapper .thumbnail.zoom{
    width: 120vw;
    height: 720px;
    transform: translate(-50vw, -270px);
    filter: brightness(40%);
    box-shadow: none;
    
  }
  .thumbnail img{
    width: 100%;    
    height: 100%;
    object-fit: cover;
  }
  .thumbnail video{
    opacity: 0;
  }
  .thumbnail.zoom video{
    opacity: 1;
    transition: 0.5s ease;
    transition-delay: 1s;
  }
  .previewContainer .previewNav{
    position: relative;
    margin-left: 0%;
    display: flex;
    align-items: center;
    width: fit-content;
    gap: 20px;
    padding: 50px 50px 50px 0;
    z-index: 20;
  }
  .previewNav .nextButton{
    color: #fff5fc;
    width: 180px;
    border-radius: 50px;
  }
  button{
    background-color: transparent;
    border: 1px solid white;
    color: inherit;
    font-size: 1rem;
    font-weight: 500;
    text-transform: uppercase;
    height: 50px;
    transition: 0.5s ease;
  }
  button:hover{
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.4);
  }
  .previewNav .previewLine{
    flex: 1;
    height: 2px;
    background-color: #ffffff;
  }
  .previewNav .previewNumber{
    opacity: 0;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 50px;
    overflow: hidden;
  }
  .previewNumber h2{
    color: #fff5fc;
    position: absolute;
    font-size: 2rem;
    font-weight: 400;
    line-height: 1;
    transform: translateY(200%);
    transition: 0.5s ease;
  }
  .previewNumber h2.active{
    transform: unset;
  }






.platformerVW{
    position: relative;
    width: 28vw;
    aspect-ratio: 960/540;
    overflow: hidden;
    border: 2px solid rgba(255, 245, 252, 1);
    border-radius: 15px;
}
.platformerVW img{
    border-radius: 15px;
    transition: transform 900ms;
}
.platformerVW video{    
    border-radius: 15px;
    transition: transform 900ms;
}
.ProjectsBG{
    background: rgba(18, 9, 50, 1);    
}
figcaption{
    position: absolute;
    width: 100%;
    height: 100%;
    border-radius: 15px;
    background-color: rgba(0, 0, 0, 0.6);
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    opacity: 0;
    transition: opacity 0.3s ease;
}
.platformerVW:hover img{
    transform: scale(1.2);
}
.platformerVW:hover video{
    transform: scale(1.2);
}
.platformerVW:hover figcaption{
    opacity: 1;
}

.TestInput{
    position: relative;
    margin: 30px 0;
    width: 310px;
    border-bottom: 2px solid #fff;
}
.TestInput label{
    position: absolute;
    color: #f0e2fa;
    top: 70%;
    left: 5px;
    transform: translateY(-50%);
    color: #fff;
    font-size: 1rem;
    pointer-events: none;
    transition: 0.5s;
}
input:hover ~ label,
input:focus ~ label,
input:valid ~ label{
top: 20%;
color: rgba(240, 226, 250, 0)
}
.TestInput input {
    width: 100%;
    height: 50px;
    background: transparent;
    border: none;
    outline: none;
    font-size: 1em;
    padding:0 35px 0 5px;
    color: #fff;
}
.lightPink{
    background: #fff5fc;
}
.darkPurple{
    background: rgba(18, 9, 50, 1);
}
.white{
    background: #fff
}

